--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <servlet>
+        <servlet-name>HelloServlet</servlet-name>
+        <servlet-class>com.Luhuihuang.week2.demo.HelloServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HelloServlet</servlet-name>
+        <url-pattern>/Hello</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>LifeCycleServlet</servlet-name>
         <servlet-class>com.Luhuihuang.week3.demo.LifeCycleServlet</servlet-class>
     </servlet>
@@ -14,6 +22,14 @@
     <servlet-mapping>
         <servlet-name>LifeCycleServlet</servlet-name>
         <url-pattern>/life</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>JDBCServlet</servlet-name>
+        <servlet-class>com.Luhuihuang.week4.demo.JDBCServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>JDBCServlet</servlet-name>
+        <url-pattern>/JDBC</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
